# libgtkflow

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  README.md  configure.ac
data/: gtkflow.pc
data/pc_gee_new/: gtkflow.pc
data/pc_gee_old/: gtkflow.pc
examples/: advanced_calculator.py  calculator.py  different_types.py  gi_preconfig.sh  scrolling.py  scrolling_multidock.py
libgflow/: Makefile.am  gflow-0.2.pc.in  gflow-dock.vala  gflow-node.vala  gflow-simple-node.vala  gflow-simple-sink.vala  gflow-simple-source.vala  gflow-sink.vala  gflow-source.vala  namespace-info.vala.in
libgtkflow/: Makefile.am  dock.vala  gtkflow-0.2.pc.in  gtkflow.xml  namespace-info.vala.in  node.vala  nodeview.vala  sink.vala  source.vala
src/: dock.vala  node.vala  nodeview.vala  sink.vala  source.vala
test/: Makefile.am  dock.py  gflow-dock-test.vala  gflow-node-test.vala  gflow-sink-test.vala  gflow-source-test.vala  gflow-test.vala  node.py  run_tests.sh  test-gtkflow.py
